Collection Api улучшения